--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,6 @@ java:
 before_install:
   - chmod +x gradlew
 
-install: skip
-
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
@@ -15,7 +13,7 @@ cache:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
 
-script:
+install:
   - ./gradlew clean build
 
 notifications:
